--- a/services.html
+++ b/services.html
@@ -669,7 +669,8 @@
                                 <ul>
                                     <li>
                                         <div class="social-area">
-                                            <a href="#">Facebook</a>
+                                            <a href="https://www.facebook.com/shadowdesignandbuild"
+                                                target="_blank">Facebook</a>
                                             <a href="#">Instagram</a>
                                             <a href="#">Medium</a>
                                         </div>
