--- a/project-grid.html
+++ b/project-grid.html
@@ -180,8 +180,8 @@
                                             </ul>
                                         </nav>
                                         <div class="action-bar">
-                                            <a href="mailto:info@Shadow.com"><i
-                                                    class="las la-envelope"></i>info@Shadow.com</a>
+                                            <a href="mailto:shadowarchitectsbuilders@gmail.com"><i
+                                                    class="las la-envelope"></i>shadowarchitectsbuilders@gmail.com</a>
                                             <a href="tel:1621173556"><i class="fal fa-phone"></i>01621173556</a>
                                             <a href="contact.html" class="theme-btn">Contact Us</a>
                                         </div>
@@ -416,7 +416,8 @@
                                 </p>
                                 <div class="company-email">
                                     <p>Have a project in mind?</p>
-                                    <a href="#">info@Shadow.com</a>
+                                    <a
+                                        href="mailto:shadowarchitectsbuilders@gmail.com">shadowarchitectsbuilders@gmail.com</a>
                                 </div>
                                 <div class="phone-number">
                                     <p>Mon-Fri, 08.00 AM-09.00 PM</p>
